--- a/cliente/app.html
+++ b/cliente/app.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Segundo parcial lab3">
+    <link rel="shortcut icon" href="./img/1380756_comic_hero_superhero_wolverine_icon.png" type="image/x-icon">
  
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -13,7 +15,9 @@
         <link rel="stylesheet" href="./CSS/styles.css">
 
 
-
+        <!-- AXIOS -->
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+        <!-- JS -->
     <script src="./JS/index.js" type="module"></script>
     <!-- PARA ICONOS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -69,7 +73,8 @@
 
             <div class="d-flex flex-column flex-md-row">
                     
-            <form action="" name="form-crud" >
+            <form action="" name="form-crud">
+                
                 <legend>Informacion del Super Heroe</legend>
 
 
