--- a/cliente/index.html
+++ b/cliente/index.html
@@ -48,26 +48,12 @@
         </div>
 
     <div class="col">   
-        <section class="row row-cols-2 m-0 p-0 w-100" id="container-cards">
+        <section id="container-cards"
+        class="d-flex flex-wrap flex-column flex-md-row justify-content-center align-item-center my-5"></section>
     
         </section>
-        <!-- <template id="template">
-            <div class="col">
-                <article>
-                    <h2></h2>
-                    <h3></h3>
-                    <ul></ul>
-                </article>
-            </div>
-         
-
-        </template> -->
-
     </div>
    
-</main>
-<footer class="row">
-     </footer>
 </main>
    </div>
   
